ws01_plumbing/log/build_2024-12-21_18-55-27/py02_service/stderr.log
  File "/home/ros/ros_learn/ws01_plumbing/install/py02_service/lib/python3.10/site-packages/py02_service/demo02_client_py.py", line 14
    //client = AddIntsClient()
    ^^
SyntaxError: invalid syntax

